# qtappinstancemanager

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
example/: CMakeLists.txt
example/src/: main.cpp
examples/multiple/: CMakeLists.txt  main.cpp
examples/single/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/oclero/: QtAppInstanceManager.hpp
lib/src/oclero/: LocalEndpoint.hpp  QtAppInstanceManager.cpp
scripts/: test-msvc.sh  test-ubuntu.sh
src/: CMakeLists.txt
src/include/oclero/: QtAppInstanceManager.hpp
src/source/oclero/: LocalEndpoint.cpp  LocalEndpoint.hpp  QtAppInstanceManager.cpp
tests/: CMakeLists.txt
tests/src/: QtAppInstanceManagerTests.cpp  QtAppInstanceManagerTests.hpp  main.cpp
